'搭建构建逻辑'

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="zh-cn">
 <head>
-	<meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>牛秀</title>
+  <link rel="stylesheet" href="bower_components/normalize.css">
+  <title>牛秀</title>
 </head>
 <body ng-app="app">
-	
+  <div ng-controller="indexCtrl">
+    
+  </div>
+  <script src="bower_components/angularjs/angular.js"></script>
+  <script src="app/js/app.js"></script>
 </body>
 </html>
