'livereload全自动工作流'

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link rel="stylesheet" href="bower_components/normalize.css">
+  <link rel="stylesheet" href="app/css/style.css">
   <title>牛秀</title>
 </head>
 <body ng-app="app">
