'图片详情页样式切完'

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
   <link rel="stylesheet" href="app/css/style.css">
   <title>牛秀</title>
 </head>
-<body ng-app="app">
-  <div ng-controller="indexCtrl">
-    
-  </div>
+<body ui-view ng-app="app">
   <script src="bower_components/angularjs/angular.js"></script>
+  <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+  <script src="app/js/config.js"></script>
   <script src="app/js/app.js"></script>
 </body>
 </html>
