'完成上传部分模拟'

--- a/release.html
+++ b/release.html
@@ -10,8 +10,8 @@
 <body ui-view ng-app="app">
   <script src="bower_components/angularjs/angular.js"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-  <script src="app/js/config.js"></script>
-  <script src="app/js/directive.js"></script>
-  <script src="app/js/app.js"></script>
+  <script src="build/js/config.min.js"></script>
+  <script src="build/js/directive.min.js"></script>
+  <script src="build/js/app.min.js"></script>
 </body>
 </html>
